feat(postgres, search): insert data to db and add search by stocknumber

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+guration
+@Profile({"prod"})
+public class EncryptorConfig {
+	private static final String JASYPT_ENCRYPTOR_PWD = "X6nVP89KZ8Ar";
 
+    @Bean("jasyptStringEncry
