--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,6 +18,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+# 訪問靜態資源
+  mvc:
+    static-path-pattern: /res/**
 
 jasypt:
   encryptor:
